# nicol

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  config.ini  dev.arnv.nicol.desktop  main.cpp  resources.qrc
.github/workflows/: build.yaml  build.yaml.bak
assets/icons/: logo.icns
chrome/assets/styles/: globals.css
chrome/error/: 404.html  offline.html
chrome/incognito/: index.html
chrome/new-tab/: index.html
chrome/ntp/: index.html
packaging/aur/: .SRCINFO  PKGBUILD
ui/: AppMenuItem.qml  BrowserWindow.qml  FullScreenNotification.qml  ToolbarButton.qml  ZoomOverlay.qml
